* Fixed the Zip function in save_all() [pyborg.py]
* Fixed the Zipfile error AGAIN! [pyborg.py]
* Removed saving functions from the interfaces to prevent saving on quit. [pyborg-irc.py & pyborg-im.py]
* Fixed the Zipfile error yet again and removed the *.dat file deletion for a better back up system [pyborg.py]
* Made the response delay effect owners too (except when responding to a command) [pyborg.py]
* Yet more dictionary fixes and an automated way to delete corrupt zipfiles in the save_all function [pyborg.py]
* The last(?) dictionary fix that seems to have removed all errors - FINALLY! [pyborg.py]
* Removed lowercasing of learned data from the code. Should get pretty interesting from here on out [pyborg.py]
* Alia now only changes her own nick to #nick instead of all nicks in the channel [pyborg-irc.py & pyborg-im.py]
* Fixed the the Capitalization bug by actually writing my own routine for it [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Moved the Capitilization code back into the core and made the regex code case-insensitive [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Fixed my bug caused by altering the unfilter function within the code [pyborg.py]
* Fixed a potential bug and fixed stealth mode code [pyborg-irc.py & pyborg-im.py]
* Added the !learn and !teach command and the learning system to make them work [pyborg.py]
* Extended new learning system by adding the !forget and !find commands [pyborg.py]
* Slightly faster response time for learned responses (.05 faster than normal) [pyborg.py]
* Added a punctuation clean up regex for keys used in the learning system so we get better matches overall [pyborg.py]
* Added the !responses command to show how many responses the bot has learned so far [pyborg.py]
* Altered the auto-optimise function to only purge every day and rebuilddict every week to avoid db corruption [pyborg.py]
* Changed the response times again and forced limit of 8 seconds for responses over 40 characters long [pyborg.py]