@@ -1,12 +1,12 @@
-Description
-===========
-Alia is a self-optimising & self-repairing Pyborg IRC Bot with the added ability to be taught via command.
+What is this?
+~~~~~~~~~~~~~
+Alia is a self-optimising Pyborg IRC Bot with the added ability to be taught via command.
 
 The original Pyborg was written by Tom Morton and Sébastien Dailly. It's a simple python Markov chain driven bot (similar to MegaHAL) with the unique ability to learn speech patterns by figure out which words go togeher well. This gives it the ability to generate replies on it's own aswell as repeating previously learned responses.
 
 What sets Alia apart from the default pyborg bot is the following:
 * Alia has bash scripts to start her quietly and keep small logs which only report when bugs happen.
-* Alia self-optimises and self-repairs - if a bug occurs, Alia will attempt to correct it herself without human intervention. She will also optimise and save her dictionary/word list every 2 hours and rebuild it every day to keep it error free.
+* Alia saves her dictionary/word list every 2 hours, optimises it every 4 hours and rebuild it every 3 days to keep it error free.
 * Alia strips common error causing input (like urls and strange characters) by default to avoid dictionary corruption.
 * Alia doesn't lowercase learned data at all. She'll respond in the same way as she learned it!
 * Alia doesn't mangle emoticons (smileys) or punctuation. She also correct I and I contractions and capitalizes the first letter of every sentence.
@@ -16,9 +16,10 @@ What sets Alia apart from the default pyborg bot is the following:
 And many more! (See ChangeLog for complete list)
 * Alia can be taught responses with the !teach or !learn commands.
 * Alia's new taught responses can be searched with !find and forgotten with with !forget.
+* Alia can be copied over an existing pyborg copy and will uses the same dictionaries/wordlists as the old one.
 
-New Commands
-============
+New Commands:
+~~~~~~~~~~~~~
 To teach Alia a response, use the !learn or !teach command with the trigger and response seperated by an |.
 Spaces don't matter, but the length is limited to the standard IRC message line (around 500 characters).
 To insert a user's nickname it's responding to into the response, please use the #nick to represent their nick.
@@ -39,8 +40,8 @@ To see how many responses Alia has learned so far you can use the !responses com
 
 For a complete list on how to use Alia, please see docs/README for the original Pyborg documentation.
 
-How to use
-==========
+How to use:
+~~~~~~~~~~~
 To use Alia, just run python pyborg-irc.py to generate the cfg files. Press Ctrl+C to stop pyborg-irc.py.
 Modify pyborg-irc.cfg and pyborg.cfg to suit your needs and then use ./alia to start the bot silently.
 Now allow her to idle in a busy channel so she can learn some basic responses. That's it. You're done. Enjoy!
